# PixelTrace

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  utils.cpp  utils.h
cmake_modules/: FindPOTRACE.cmake  FindSFML.cmake
src/: SVG_Parser.cpp  SVG_Parser.h  color.cpp  color.h  image.cpp  image.h  main.cpp  utils.cpp  utils.h
